# HUUM_model

./: .gitignore  README.md  huum_model.code-workspace  pyproject.toml  setup.cfg  setup.py
src/huum_model/: agent.py  appliance.py  consumer_unit.py  holding.py  huum.py  model.py  room.py
src/huum_model/elements/: alternatives.py  conditionals.py  lifecycle.py  probability_type.py  ts_trapeze.py  usage_pattern.py  usage_template.py
src/huum_model/elements/timed_effects/: base_timed_effect.py  usage_habit.py
src/huum_model/events/: base_event.py  event.py  event_effect.py  event_queue.py  event_queue_item.py
src/huum_model/graph/: base_connection.py
src/huum_model/translators/passed_time/: base_passed_time.py  passed_time.py
src/huum_model/translators/storage/: base_storage.py  rate_increase.py  storage.py
src/huum_model/util/: base_data.py  base_parts.py  central_data_store.py  date_parser.py  fifo_queue.py  number_output.py  rnd_wrapper.py  settings.py  spaced_array.py  string_output.py  table_1d.py
